--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,15 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700" rel="stylesheet">
+
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <!-- CSS Reset and Stylesheet -->
-    <link rel="stylesheet" type="text.css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-    <script src="assets/javascript/game.js">
-    </script>
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> 
@@ -23,7 +19,37 @@
 </head>
 <body>
 
-    <h1>home.html</h1>
-    
+<div class="text-center">
+    <img id="logo" class="" src="nes-controller.png">
+</div>
+
+<div class="container">
+    <h1>Gamer-Friend Finder!</h1>
+
+    <h2><em>Friends that game together stay together!</em></h2>
+
+    <hr>
+
+    <h3 class="text-center">Take this survey, find someone to game with!</h3>
+
+    <div class="d-flex justify-content-center mb-3">
+        <button id="survey-btn" class="btn btn-info border border-dark">Go to Survey</button>
+    </div>
+   
+    <div class="api-links text-center">
+        <a href="api/friends">API Friends List</a> | <a href="https://github.com/MrStevenNg/friend-finder">GitHub Repo</a>
+    </div>
+
+</div>
+
+<!-- jQuery JavaScript -->
+<script>
+
+$("#survey-btn").on("click", function(){
+    window.location = "/survey";
+})
+
+</script>
+
 </body>
 </html>
