fixed logic to determine best matched gamer-friend

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -198,7 +198,7 @@
     </div>
    
     <div class="api-links text-center">
-        <a href="#">API Friends List</a> | <a href="#">GitHub Repo</a>
+        <a href="api/friends">API Friends List</a> | <a href="https://github.com/MrStevenNg/friend-finder">GitHub Repo</a>
     </div>
 
 </div>
