basic functionality finished

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -210,15 +210,21 @@
 <div class="bg-modal">
     <div class="modal-content">
         <div class="close">+</div>
-        <img id="match-img" src="http://www.facetheforce.today/rey/400" alt="Your best matched gamer-friend">
+        <img id="match-img" src="" alt="Your best matched gamer-friend">
         <h3>Your best matched gamer-friend!</h3>
-        <h4 id="match-name">REY</h4>
+        <h4 id="match-name"></h4>
     </div>
 </div>
+
+<div class="test">TEST</div>
 
 <!-- jQuery JavaScript -->
 <script>
 
+    // Automatically scroll screen back to top of page.
+    window.scrollTo(0,0);
+
+    // click functionality to close modal.
     $(".close, #match-name").on("click", function(){
         $(".bg-modal").css("display", "none");
 
@@ -228,20 +234,20 @@
         }); 
     });
 
+    // click functionality for submit button.
     $("#submit-btn").on("click", function(){
         event.preventDefault();
 
+        // display modal.
         $(".bg-modal").css("display", "flex");
 
+        // lock scrolling
         $('html, body').css({
             overflow: 'hidden',
             height: '100%'
         }); 
 
-        window.scrollTo(0,0);
-
-        console.log("Submit button has been clicked!");
-
+        // Instantiate the object userData and assign the survey data as key pairs.
         var userData = {
             name: $("#user-name").val(),
             photo: $("#user-photo").val(),
@@ -259,14 +265,16 @@
             ]
         };
 
+        // displays (within the client's console) the instantiated object comprised of user's survey answers.
         console.log(userData);
 
-        
-
         $.post("/api/friends", userData, function(data) {
-        // Take result from POST and display the best match's name and photo (in modal)
-        // $("#match-name").text(data.name);
-        // $("#match-image").attr("src", data.photo);
+
+            console.log(data);
+
+            // Take result from POST and display the best match's name and photo (in modal)
+            $("#match-name").text(data.name);
+            $("#match-img").attr("src", data.photo);
         });
 
     });
